# SLURP

./: .gitignore  LTLMoPTester.py  README.md  commproxy.py  datamanager.py  debug_frames.py  debug_semantics.py  download.py  ltlmop_client.py  ltlmop_test_client.py  new_parse_server.py  nlmaster.py  nosetests.py  parse_server.py  parser_demo.py  parser_demo.sh  pennpipeline.py  pipelinehost.py  pragbot_client.py  pragbot_server.py  pragbot_slurp_server.py  pragbot_test_client.py  pylintrc  run_ltlmop_test_client.sh  run_pragbot_slurp_server.sh  semantics_logger.py  sentenceStatus.xml  set_path.sh  setup.cfg  spawn_pragbot_client.bat  spawn_pragbot_client.sh  statemanager.py  stress_pipelinehost.py  test_ge.py  test_pipelinehost.py  testpipelinehost.py  teststatemanager.py
jr/: directions.py
junior/: junior.config
ltlbroom/: basic_sim.aut  basic_sim.ltl  basic_sim.smv  dialog.py  find_user.aut  find_user.ltl  find_user.smv  find_user2.ltl  find_user3.ltl  ltl.py  ltlgeneration.py  makeaut.sh  small_sim.aut  small_sim.ltl  small_sim.smv  specgeneration.py  talkback.py  test_sim.aut  test_sim.ltl  test_sim.smv
pragbot/: GameEnvironment.py  game.py  ltlmopclient.py  test_game.py
pragbotscenario/: compile_spec.sh  pragbot.converted.regions  pragbot.spec  pragbot.topo  pragbot.training.goadvanced.converted.regions  pragbot.training.goadvanced.spec  pragbot.training.gomoderate.converted.regions  pragbot.training.gomoderate.spec  (+2 more)
ros/nlp/: CMakeLists.txt  mainpage.dox  manifest.xml  pipelineservice.py  semanticsservice.py  tagger_server.py  test_listen.py  test_publish.py  test_service.py
ros/nlp/src/: pipelineservice.py  semanticsservice.py
rosmarc/: nlproxy.py  (+4 more)
(+336 files in other folders)
